[package]
name = "kstool"
version = "0.3.2"
authors = ["KunoiSayami <i@leanhe.dev>"]
edition = "2021"
description = "A tools crate used by KunoiSayami's projects"
license = "AGPL-3.0-or-later"

[dependencies]
sqlx = { version = "0.8.0", features = ["sqlite"], optional = true }

jiff = { version = "0.2", default-features = false, features = [
    "std",
], optional = true }

[features]
jiff-tz = ["jiff", "jiff/tzdb-bundle-platform", "jiff/tz-system"]
